add library to bootstrap mariadb when use a custom datadir

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -87,7 +87,7 @@ mariadb_swappiness: 0
 # mariadb_socket: /var/lib/mysql/mysql.sock
 
 # Log file settings.
-mariadb_log_file_group: mysql
+# mariadb_log_file_group: mysql
 
 # Slow query log settings.
 # mariadb_slow_query_log_enabled: false
