--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,23 +9,23 @@
 - name: configure mariadb
   include_tasks: configure.yml
 
-# - name: security changes
-#   include_tasks: secure-installation.yml
-#
-# - name: create monitoring stuff
-#   include_tasks: monitoring.yml
-#
-# - name: create databases
-#   include_tasks: databases.yml
-#
-# - name: create users
-#   include_tasks: users.yml
-#
-# # - include_tasks: replication.yml
-#
-# - name: ensure mariadb is enabled on boot
-#   service:
-#     name: '{{ mariadb_service }}'
-#     enabled: true
+- name: security changes
+  include_tasks: secure-installation.yml
+
+- name: create monitoring stuff
+  include_tasks: monitoring.yml
+
+- name: create databases
+  include_tasks: databases.yml
+
+- name: create users
+  include_tasks: users.yml
+
+# - include_tasks: replication.yml
+
+- name: ensure mariadb is enabled on boot
+  service:
+    name: '{{ mariadb_service }}'
+    enabled: true
 
 ...
