--- a/tasks/prepare.yaml
+++ b/tasks/prepare.yaml
@@ -153,7 +153,7 @@
 
 - name: detect if mariadb installed
   stat:
-    path: /usr/sbin/mysqld
+    path: /usr/bin/mysqld_safe
   register: mysqld_binary_file
 
 - name: detect if mariadb installed
@@ -163,10 +163,10 @@
     - mysqld_binary_file is defined
     - mysqld_binary_file.stat is defined
 
-- debug:
-    msg:
-      - "{{ mysqld_binary_file }}"
-      - "{{ mariadb_installed }}"
+# - debug:
+#     msg:
+#       - "{{ mysqld_binary_file }}"
+#       - "{{ mariadb_installed }}"
 
 - name: do facts module to get latest information
   setup:
