--- a/vars/main.yml
+++ b/vars/main.yml
@@ -6,7 +6,7 @@ mariadb_config_defaults_client:
   # Default is Latin1, if you need UTF-8 set this (also in server section)
   default-character-set: utf8mb4
   # socket location
-  socket: /var/run/mysqld/mysqld.sock
+  socket: "{{ mariadb_socket }}"
 
   # Example of client certificate usage
   # ssl-cert: /etc/mysql/client-cert.pem
@@ -25,9 +25,9 @@ mariadb_config_defaults_mysqld:
   #
   user: mysql
   pid-file: /run/mysqld/mysqld.pid
-  socket: /run/mysqld/mysqld.sock
+  socket: "{{ mariadb_socket }}"
   #port: 3306
-  basedir: /usr
+  # basedir: /usr
   datadir: /var/lib/mysql
   tmpdir: /tmp
   lc-messages-dir: /usr/share/mysql
@@ -132,7 +132,7 @@ mariadb_config_defaults_mysqld_safe:
   # It has been reported that passwords should be enclosed with ticks/quotes
   # especially if they contain "#" chars...
   # Remember to edit /etc/mysql/debian.cnf when changing the socket location.
-  socket: /var/run/mysqld/mysqld.sock
+  socket: "{{ mariadb_socket }}"
   nice: "0"
   skip_log_error:
   syslog:
@@ -143,6 +143,19 @@ mariadb_config_defaults_mysqldump:
   max_allowed_packet: 16M
 
 mariadb_config_defaults_galera: {}
+  # # Mandatory settings
+  # wsrep_on=ON
+  # wsrep_provider=
+  # wsrep_cluster_address=
+  # binlog_format=row
+  # default_storage_engine=InnoDB
+  # innodb_autoinc_lock_mode=2
+  # # Allow server to accept connections on all interfaces.
+  # bind-address=0.0.0.0
+  #
+  # # Optional setting
+  # wsrep_slave_threads=1
+  #   innodb_flush_log_at_trx_commit=0
 
 mariadb_config_defaults_embedded: {}
 
