--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,13 +57,13 @@ jobs:
       fail-fast: false
       matrix:
         image:
+          - archlinux:latest
           - debian:9
           - debian:10
           - ubuntu:18.04
           - ubuntu:20.04
           - centos:8
           - oraclelinux:8
-          # - archlinux:latest
         python-version:
           - '3.8'
           - '3.9'
