--- a/molecule/default/group_vars/all/vars.yml
+++ b/molecule/default/group_vars/all/vars.yml
@@ -18,6 +18,7 @@ mariadb_users:
     host: '%'
     password: molecule
     priv: "molecule.*:ALL"
+    encrypted: false
 
 mariadb_config_mysqld:
   socket: "{{ mariadb_socket }}"
