--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -21,7 +21,11 @@
 - name: create users
   include_tasks: users.yml
 
-# - include_tasks: replication.yml
+- include_tasks: replication.yml
+  when:
+    - mariadb_replication_role is defined
+    - mariadb_replication_role | length > 0
+    - mariadb_replication_role in ['master', 'replica']
 
 - name: ensure mariadb is enabled on boot
   service:
