--- a/vars/main.yml
+++ b/vars/main.yml
@@ -87,7 +87,7 @@ mariadb_config_defaults_mysqld:
   # log_bin_basename:
   log_bin: "{{ ansible_hostname }}-log-bin"
   log_bin_index: "{{ ansible_hostname }}-log-bin.index"
-  log_bin_compress: 1
+
   expire_logs_days: 10
   max_relay_log_size: 100M
   max_binlog_size: 100M
@@ -169,6 +169,9 @@ mariadb_config_defaults_embedded: {}
 
 mariadb_config_defaults_custom:
   mariadb: {}
+  mariadb-10.3:
+    # mariadb > 10.1
+    log_bin_compress: 1
   client-mariadb: {}
   mysql_upgrade: {}
   mysqladmin: {}
