--- a/tasks/installation.yml
+++ b/tasks/installation.yml
@@ -16,17 +16,6 @@
     name: "{{ mariadb_packages }}"
     state: present
   register: mariadb_install_packages
-#   when:
-#     - ansible_os_family | lower != 'redhat'
-#
-# - name: ensure mariadb packages are installed (centos >= 8)
-#   package:
-#     name: "{{ mariadb_packages }}"
-#     state: present
-#     # use: dnf
-#   register: mariadb_install_packages
-#   when:
-#     - ansible_os_family | lower == 'redhat'
 
 - name: fix debian specific debian-start file
   template:
@@ -43,7 +32,6 @@
   when:
     - ansible_os_family | lower != 'archlinux'
 
-
 - name: python support
   block:
     - name: create requirements.txt
@@ -54,7 +42,7 @@
 
     - name: ensure python bindings for mariadb packages 1st
       pip:
-        executable: pip3
+        # executable: pip3
         requirements: /tmp/mariadb-requirements.txt
         state: present
       register: pip_install
@@ -81,10 +69,10 @@
         - mariadb_build_packages is defined
         - mariadb_build_packages | length > 0
 
-    - name: remove requirements.txt
-      file:
-        path: /tmp/mariadb-requirements.txt
-        state: absent
+    # - name: remove requirements.txt
+    #   file:
+    #     path: /tmp/mariadb-requirements.txt
+    #     state: absent
   when:
     - mariadb_python_packages is defined
     - mariadb_python_packages | length > 0
