--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -133,6 +133,14 @@
   when:
     - mariadb_configure_swappiness | bool
 
+- name: run bootstrap for archlinux
+  mariadb_bootstrap:
+    datadir: /var/lib/mysql
+    skip_test_db: false
+  when:
+    - ansible_os_family | lower == 'archlinux'
+    - not mariadb_config_mysqld.datadir is defined
+
 - name: run bootstrap on custom data directories '{{ mariadb_config_mysqld.datadir }}'
   mariadb_bootstrap:
     datadir: "{{ mariadb_config_mysqld.datadir }}"
