--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,13 +1,10 @@
 ---
 
-- name: install repositories
-  include_tasks: preparations.yml
+- include_tasks: prepare.yaml
 
-- name: detect available mariadb version
-  include_tasks: detect_mariadb_version.yml
+- include_tasks: detect_mariadb_version.yml
 
-- name: install mariadb
-  include_tasks: installation.yml
+- include_tasks: installation.yml
 
 - name: configure mariadb
   include_tasks: configure.yml
@@ -24,9 +21,15 @@
 - name: create users
   include_tasks: users.yml
 
-# - include_tasks: replication.yml
+- include_tasks: replication.yml
+  when:
+    - mariadb_replication_role is defined
+    - mariadb_replication_role | length > 0
+    - mariadb_replication_role in ['master', 'replica']
 
 - name: ensure mariadb is enabled on boot
   service:
     name: '{{ mariadb_service }}'
     enabled: true
+
+...
