--- a/tasks/users.yml
+++ b/tasks/users.yml
@@ -1,16 +1,18 @@
 ---
 
-- name: Ensure mariadb users are present.
+- name: create or remove mariadb users
   mysql_user:
     name: "{{ item.name }}"
     host: "{{ item.host | default('localhost') }}"
     password: "{{ item.password }}"
     priv: "{{ item.priv | default('*.*:USAGE') }}"
     state: "{{ item.state | default('present') }}"
-    append_privs: "{{ item.append_privs | default('no') }}"
-    encrypted: "{{ item.encrypted | default('no') }}"
+    append_privs: "{{ item.append_privs | default('false') }}"
+    encrypted: "{{ item.encrypted | default('true') }}"
   loop:
     '{{ mariadb_users }}'
   loop_control:
-    label: "{{ item.name }}"
+    label: "{{ item.name }}, state: {{ item.state | default('present') }}"
   no_log: true
+
+...
