play with linter

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -27,5 +27,6 @@ jobs:
           VALIDATE_ANSIBLE: true
           VALIDATE_MARKDOWN: true
           VALIDATE_YAML: true
+          MARKDOWN_CONFIG_FILE: .markdown-lint.yml
 ...
 
