test multiple workflows

--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -1,5 +1,5 @@
 ---
-name: debian
+name: ubuntu
 
 on:
   pull_request:
@@ -23,8 +23,8 @@ jobs:
       fail-fast: false
       matrix:
         image:
-          - debian:9
-          - debian:10
+          - ubuntu:18.04
+          - ubuntu:20.04
         python-version:
           - '3.8'
           - '3.9'
