--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,6 +62,7 @@ jobs:
           - debian:10
           - ubuntu:18.04
           - ubuntu:20.04
+          - centos:7
           - centos:8
           - oraclelinux:8
         python-version:
