--- a/molecule/default/group_vars/all/vars.yml
+++ b/molecule/default/group_vars/all/vars.yml
@@ -1,6 +1,6 @@
 ---
 
-mariadb_use_external_repo: false
+# mariadb_use_external_repo: false
 
 mariadb_bind_address: 127.0.0.1
 mariadb_root_password: root_password
