--- a/tasks/secure-installation.yml
+++ b/tasks/secure-installation.yml
@@ -18,47 +18,10 @@
     dba_config_directory: "{{ mariadb_config_dir }}"
     mycnf_file: "{{ mariadb_root_home }}/.my.cnf"
 
-# This command will fail when the root password was set previously
-- name: check if root password is set
-  command: >
-    mysqladmin -u root status
-  changed_when: false
-  failed_when: false
-  register: root_pwd_check
-  tags: mariadb
-
-- name: disallow root login remotely
-  command: >
-    mysql
-      --skip-column-names
-      --batch
-      --execute
-      "delete from mysql.user where user = '{{ mariadb_root_username }}' and host not in ('localhost', '127.0.0.1', '::1')"
-  changed_when: false
-
-- name: get list of hosts for the anonymous user
-  command: >
-    mysql
-      --skip-column-names
-      --batch
-      --execute
-      'select host from mysql.user where user = ""'
-  register: mariadb_anonymous_hosts
-  changed_when: false
-  check_mode: false
-
-- name: remove anonymous mariadb users
-  mysql_user:
-    name: ""
-    host: "{{ item }}"
-    state: absent
-  # no_log: true
-  loop:
-    "{{ mariadb_anonymous_hosts.stdout_lines | default([]) }}"
-
-- name: remove mariadb test database
-  mysql_db:
-    name: test
-    state: absent
+- name: secure MariaDB
+  mariadb_secure:
+    disallow_anonymous_users: true
+    disallow_test_database: true
+    disallow_remote_root_login: true
 
 ...
