--- a/vars/debian-9.yaml
+++ b/vars/debian-9.yaml
@@ -3,6 +3,7 @@
 mariadb_packages:
   - libmariadb-dev
   - mariadb-server
+  - python-mysqldb
   - python3-mysqldb
   - python3-pip
   - python3-setuptools
